Home: Align everything center + more responsiveness fixes

--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -32,8 +32,8 @@ body {
     display: flex;
     flex-direction: column;
     margin-bottom: 40px;
-    padding-left: 40px;
-    width: fit-content;
+    width: 1205px; // Calculated to fit 5 posters
+    max-width: calc(100% - 40px);
 }
 
 h2{
@@ -52,6 +52,12 @@ h2.UserAnimes{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+#SampleAnimeList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .AnimeSectionHeader {
@@ -108,6 +114,7 @@ h2.UserAnimes{
     align-items: center;
     background-color: $foreground-color;
     padding-bottom: 30px;
+    width: 100%;
 }
 
 #PickRandomDiv > p{
